[metadata]
name = testconsole
summary = 
home-page = https://github.com/freeekanayaka/testconsole
description-file = README.rst
author = Free Ekanayaka
author-email = free@ekanayaka.io
license = MIT
platform = POSIX
classifier = 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keyword = subunit, unittest, console

[entry_points]
console_scripts =
    testconsole = testconsole.command.run:main

[extras]
test =
    coverage>=4.2
    testrepository

[bdist_wheel]
universal = 1
